--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
             Hi! I am Ajay and this is my first webapp.
             <h4> A new heading </h4>
 	        I've made some new local changes.
+	        I am a champ.
 	    </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
