--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Ajay and this is my first webapp.
             <h4> A new heading </h4>
-	        I've made some new local changes.
+	        I've made some new local changes. Yes,
 	        I am a champ.
 	    </div>
         <script type="text/javascript" src="/ui/main.js">
