--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Ajay and this is my first webapp.
+            Hi! Welcome to my profile.
+            I am Ajay and this is my first webapp.
             <h4> A new heading </h4>
 	        I've made some new local changes. Yes,
 	        I am a champ.
