--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! Welcome to my profile.
+            <h4>Hi! Welcome to my profile.</h4>
             I am Ajay and this is my first webapp.
             <h4> A new heading </h4>
 	        I've made some new local changes. Yes,
