--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             <h4>Hi! Welcome to my profile.</h4>
             I am Ajay and this is my first webapp.
-            <h4> A new heading </h4>
+            <h4> I like the IMAD course </h4>
 	        I've made some new local changes. Yes,
 	        I am a champ.
 	    </div>
