[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,33 @@
 <html>
+    <head>
+        <title>
+            Article One | Ajay Kumar
+        </title>
+    </head>
+
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            August 9, 2017
+        </div>
+        <div>
+            <p>
+                This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
+            </p>
+            <p>
+                This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
+            </p>
+            <p>
+                This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
+            </p>
+        </div>
+    </body>
+    
+    
 </html>
