--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article One | Ajay Kumar
         </title>
+        <meta name="viewport" content="width=device-width, intitial-scale=1" /> 
     </head>
 
     <body>
