--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,29 +4,39 @@
             Article One | Ajay Kumar
         </title>
         <meta name="viewport" content="width=device-width, intitial-scale=1" /> 
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
 
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            August 9, 2017
-        </div>
-        <div>
-            <p>
-                This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
-            </p>
-            <p>
-                This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
-            </p>
-            <p>
-                This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                August 9, 2017
+            </div>
+            <div>
+                <p>
+                    This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
+                </p>
+                <p>
+                    This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
+                </p>
+                <p>
+                    This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile. This is the content for my first artcile.
+                </p>
+            </div>
         </div>
     </body>
     
