--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,13 @@
         <meta name="viewport" content="width=device-width, intitial-scale=1" /> 
         <style>
             .container {
-                max-width: 800px;
+                max-width: 1000px;
                 margin: 0 auto;
-                color: grey;
+                color: #171515;
                 font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
         </style>
     </head>
