[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,29 +4,42 @@
             Article Two | Ajay Kumar
         </title>
         <meta name="viewport" content="width=device-width, intitial-scale=1" /> 
+        <style>
+            .container {
+                max-width: 1000px;
+                margin: 0 auto;
+                color: #171515;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        </style>
     </head>
 
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Two
-        </h3>
-        <div>
-            August 9, 2017
-        </div>
-        <div>
-            <p>
-                This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile.
-            </p>
-            <p>
-                This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile.
-            </p>
-            <p>
-                This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Two
+            </h3>
+            <div>
+                August 9, 2017
+            </div>
+            <div>
+                <p>
+                    This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile.
+                </p>
+                <p>
+                    This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile.
+                </p>
+                <p>
+                    This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile. This is the content for my second artcile.
+                </p>
+            </div>
         </div>
     </body>
     
