--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,20 +3,9 @@
         <title>
             Article Three | Ajay Kumar
         </title>
-        <meta name="viewport" content="width=device-width, intitial-scale=1" /> 
-        <style>
-            .container {
-                max-width: 1000px;
-                margin: 0 auto;
-                color: #171515;
-                font-family: sans-serif;
-                padding-top: 60px;
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        </style>
+        <meta name="viewport" content="width=device-width, intitial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
-
     <body>
         <div class="container">
             <div>
