--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,17 +4,7 @@
             Article Two | Ajay Kumar
         </title>
         <meta name="viewport" content="width=device-width, intitial-scale=1" /> 
-        <style>
-            .container {
-                max-width: 1000px;
-                margin: 0 auto;
-                color: #171515;
-                font-family: sans-serif;
-                padding-top: 60px;
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
 
     <body>
