--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,9 @@
 	        I've made some new local changes. Yes,
 	        I am a champ.
 	    </div>
+	    <script>
+	        alert('Hi, I\'m Javascript');
+	    </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
