--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main-text' class="center text-big bold">
             <h4>Hi! Welcome to my profile.</h4>
             I am Ajay and this is my first webapp.
             <h4> I like the IMAD course </h4>
