--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
 	        I am a champ.
 	    </div>
 	    <script>
-	        alert('Hi, I\'m Javascript');
+	        //alert('Hi, I\'m Javascript');
 	    </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
