--- a/ui/index.html
+++ b/ui/index.html
@@ -4,20 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='AJ' src="https://pbs.twimg.com/profile_images/895625532167004160/CiANZt6o_400x400.jpg" class="img-medium"/>
-        </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            <h4>Hi! Welcome to my profile.</h4>
-            I am Ajay and this is my first webapp.
-            <h4> I like the IMAD course </h4>
-	        I've made some new local changes. Yes,
-	        I am a champ.
+        <div class="container">
+            <div class="center">
+                <img id='AJ' src="https://pbs.twimg.com/profile_images/895625532167004160/CiANZt6o_400x400.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi! my name is Ajay
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I work at Land Transport Authority of Singapore
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
 	    </div>
-	    <script>
-	        //alert('Hi, I\'m Javascript');
-	    </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
